@@ -34,6 +34,8 @@
 #include <grub/cpu/relocator.h>
 #include <grub/extcmd.h>
 
+GRUB_MOD_LICENSE ("GPLv3+");
+
 static grub_dl_t my_mod;
 static struct grub_relocator *rel;
 static grub_uint32_t eip = 0xffffffff;
